Expand JVM, Design Patterns, and Testing module READMEs